Centering the quote box in the middle and designing the box

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@ code {
     monospace;
 }
 
-.root {
+/* .root {
     display: flex;
     align-items: center;
     justify-content: center;
-}
+} */
