--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 html,  body {
     height: 100%;
+    background-image: url(./image/aaa.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .App {
