--- a/src/quote-machine.css
+++ b/src/quote-machine.css
@@ -29,23 +29,38 @@
 }
 
 #tweet-quote {
-    background-image: url(\image\twitter.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 5vh;
+    color: black;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(223, 219, 229, 0.8);
+    font-size: 1.5vw;
+    border-radius: 12px;
+    border: 0px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.2s;
+    cursor: pointer;
+    width: 4.5vw;
+    height: 2.2vw;
 }
+
+#tweet-quote:hover {
+    background-color: rgba(223, 219, 229, 1); 
+  }
 
 #new-quote {
     background-color: rgba(223, 219, 229, 0.8);
-    font-size: 20px;
+    font-size:  1.5vw;
     border-radius: 12px;
     border: 0px;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.2s;
     cursor: pointer;
     width: 8vw;
+    height: 2.2vw;
 }
 
 #new-quote:hover {
-    background-color: rgba(223, 219, 229, 1); /* Green */
+    background-color: rgba(223, 219, 229, 1); 
   }
